compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_entrypoints_empty.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/entrypoints/empty.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × missing main function
   ╭─[tests/fixtures/diagnostics/entrypoints/empty.ml:1:1]
 1 │ 
   · ┬
   · ╰── stage0 requires one entrypoint named main
   ╰────
  help: add: fn main() { dbg("hello world") }
